svcomp/gh-619/old/results/esbmc-kind.2022-02-21_11-13-10.logfiles/SV-COMP22_unreach-call.linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.yml.log
./esbmc-wrapper.py -p ../sv-benchmarks/c/properties/unreach-call.prp -s kinduction --arch 64 ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i


--------------------------------------------------------------------------------


Verifying with ESBMC
Command: ./esbmc --no-div-by-zero-check --force-malloc-success --state-hashing --add-symex-value-sets --no-align-check --k-step 5 --floatbv --unlimited-k-steps ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i --64 --witness-output linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i.graphml --no-pointer-check --no-bounds-check --interval-analysis --goto-unwind --unlimited-goto-unwind --k-induction --max-inductive-step 3 
ESBMC version 6.8.0 64-bit x86_64 linux
Target: 64-bit little-endian x86_64-unknown-linux with esbmc libc
file ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i: Parsing

../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:19532:6: error: cannot redeclare builtin function '__builtin_va_copy'
void __builtin_va_copy(__builtin_va_list , __builtin_va_list ) ;
     ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:19532:6: note: '__builtin_va_copy' is a builtin with type 'void (struct __va_list_tag *, struct __va_list_tag *)'
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:19544:12: warning: incompatible redeclaration of library function 'vsnprintf' [-Wincompatible-library-redeclaration]
extern int vsnprintf(char * , size_t , char const * , va_list * ) ;
           ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:19544:12: note: 'vsnprintf' is a builtin with type 'int (char *, unsigned long, const char *, struct __va_list_tag *)'
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:20725:23: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
    __builtin_va_copy((va_list *)(& ap), args);
                      ^~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:20725:42: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
    __builtin_va_copy((va_list *)(& ap), args);
                                         ^~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:20872:25: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
      __builtin_va_copy((va_list *)(& ap), args);
                        ^~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:20872:44: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
      __builtin_va_copy((va_list *)(& ap), args);
                                           ^~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--staging--lustre--lustre--libcfs--libcfs.ko-entry_point.cil.out.i:26132:11: warning: no case matching constant switch condition '42'
  switch (42) {
          ^~
PARSING ERROR

Unknown
